# Terrain

./: .gitignore  README.md
src/ppo_cg_course/: CMakeLists.txt  Makefile
src/ppo_cg_course/core/: main.cpp
src/ppo_cg_course/core/config/: config.cpp
src/ppo_cg_course/core/data_access/data_access_image/: data_access_image_base.h  data_access_image_bmp.cpp  data_access_image_bmp.h  data_access_image_bmp.hpp
src/ppo_cg_course/core/data_access/users/: base_user.h  users.h  users.hpp  users_struct.h
src/ppo_cg_course/core/data_access/users/admin/: admin.cpp  admin.h
src/ppo_cg_course/core/data_access/users/user/: users.cpp  users.h
src/ppo_cg_course/core/entry/: entry.cpp  entry.h
src/ppo_cg_course/core/entry/app_command/: app_command.cpp  app_command.h
src/ppo_cg_course/core/geometry/point/: point_2d.h  point_2d.hpp  point_3d.h  point_3d.hpp
src/ppo_cg_course/core/geometry/triangle/: triangle.h  triangle.hpp  triangle_3d.hpp
src/ppo_cg_course/core/geometry/vector/: vector_3d.h  vector_3d.hpp
src/ppo_cg_course/core/gui/: main_window.cpp  main_window.h  ui_mainwindow.h
src/ppo_cg_course/core/heightmap/perlin_noise/: perlin_original.h  perlin_original.hpp
src/ppo_cg_course/core/invisible/zbuffer/: zbuffer.cpp  zbuffer.h  zbuffer.hpp
src/ppo_cg_course/core/object/: object_base.h
src/ppo_cg_course/core/object/terrain/: terrain.cpp  terrain.h  terrain.hpp
src/ppo_cg_course/core/object/terrain/terrain_commands/: terrain_command_base.h  terrain_commands.h
src/ppo_cg_course/core/object/terrain/terrain_facade/: terrain_facade.h
src/ppo_cg_course/core/scene/: scene.cpp  scene.h
src/ppo_cg_course/core/scene/scene_commands/: scene_command_base.h  scene_commands.cpp
src/ppo_cg_course/log_data/: log_user.txt
src/ppo_cg_course/unit_tests/: test_perlin_noise.cpp  tests_image.cpp  tests_perlin_noise.cpp  tests_point_3d.cpp  tests_users.cpp  tests_zbuffer.cpp
